# gwl-margarita-tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  justfile  pyproject.toml  requirements.txt
app/: database.py  main.py  models.py
app/templates/: index.html
app/templates/partials/: cards.html
