[project]
name = "gwl-margarita-tracker"
dynamic = ["version"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.115.14",
    "jinja2>=3.1.6",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.35.0",
]

[tool.hatch.version]
path = "app/__about__.py"

[tool.hatch.build.targets.wheel]
packages = ["app"]